--- a/style.css
+++ b/style.css
@@ -57,12 +57,12 @@ ul {
   margin-top: 2rem;
 }
 .categories {
-  margin-top: 2.2rem;
-  padding-left: 10rem;
-  padding-right: 10rem;
+  margin-top: 5.5rem;
+  padding-left: 12rem;
+  padding-right: 12rem;
 }
 .categories .heading {
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
   text-align: left;
 }
 .categories .cards {
@@ -71,8 +71,8 @@ ul {
 }
 .categories .cards div {
   margin-bottom: 2rem;
-  height: 250px;
-  width: 480px;
+  height: 200px;
+  width: 390px;
   background: white;
   border: 2px #e6e6e6 solid;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -91,9 +91,15 @@ ul {
   font-size: 1.7rem;
   color: black;
 }
+.glance-at-product {
+  margin-top: 5.5rem;
+  padding-left: 12rem;
+  padding-right: 12rem;
+}
 .glance-at-product .heading {
   font-size: 3.5rem;
   letter-spacing: -2px;
+  margin-bottom: 5rem;
 }
 .glance-at-product div {
   width: 60vw;
@@ -108,8 +114,12 @@ ul {
   width: 100%;
 }
 .faqs {
+  margin-top: 7rem;
   padding-left: 10rem;
   padding-right: 10rem;
+}
+.faqs .heading{
+    margin-bottom: 5rem;
 }
 .faqs .cards {
   margin-top: 2rem;
@@ -130,7 +140,7 @@ ul {
   align-items: flex-start;
   color: black;
   position: relative;
-  margin-bottom: 2rem;
+  margin-bottom: 3.5rem;
 }
 .faqs .cards div h3 {
   font-size: 2.3rem;
@@ -155,8 +165,12 @@ ul {
   opacity: 1;
 }
 .have-a-read {
+    margin-top: 7rem;
   padding-left: 10rem;
   padding-right: 10rem;
+}
+.have-a-read .heading{
+    margin-bottom: 4rem;
 }
 .have-a-read .cards {
   margin-top: 2rem;
@@ -176,7 +190,7 @@ ul {
   align-items: flex-start;
   color: black;
   position: relative;
-  margin-bottom: 2rem;
+  margin-bottom: 3.5rem;
 }
 .have-a-read .cards div h3 {
   font-size: 2.5rem;
@@ -196,8 +210,12 @@ ul {
   cursor: pointer;
 }
 .topics-you-cant-miss {
+    margin-top: 7rem;
   padding-left: 10rem;
   padding-right: 10rem;
+}
+.topics-you-cant-miss .heading{
+    margin-bottom: 5rem;
 }
 .topics-you-cant-miss .cards {
   margin-top: 2rem;
@@ -217,7 +235,7 @@ ul {
   align-items: flex-start;
   color: black;
   position: relative;
-  margin-bottom: 2rem;
+  margin-bottom: 3.5rem;
   z-index: 1;
   overflow: hidden;
 }
@@ -255,4 +273,39 @@ ul {
     to(rgba(0, 0, 0, 0))
   );
   mask-image: linear-gradient(to left, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+}
+.footer {
+    margin-top: 10rem;
+  background-color: #0e79bd;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  padding-top: 4rem;
+}
+.footer div:nth-child(1) {
+  background-color: #ebebeb;
+}
+.footer img {
+  width: 200px;
+}
+.footer div:nth-child(2) {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  color: white;
+  font-size: 2rem;
+}
+.footer div:nth-child(2) span {
+  padding: 1rem;
+  margin-left: -4rem;
+  margin-right: -4rem;
+  cursor: pointer;
+}
+.footer p {
+  color: white;
+  font-size: 2rem;
+  text-align: center;
+  padding: 4rem;
+  padding-bottom: 5rem;
 }
